--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         <activity
             android:name=".activity.GameActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.RankListActivity"
+            android:exported="false" />
 
         <activity
             android:name=".activity.MainActivity"
