--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AircraftWar2024"
         tools:targetApi="31">
+
         <activity
             android:name=".activity.OfflineActivity"
             android:exported="false" />
         <activity
             android:name=".activity.GameActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.RankListActivity"
+            android:exported="false"/>
+
+
+<!--        以下为测试需要将启动页改为记录记录页RankListActivity，恢复正常则把以下注释掉的内容恢复并删除以下内容-->
 
         <activity
             android:name=".activity.MainActivity"
@@ -28,6 +35,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <activity-->
+<!--            android:name=".activity.MainActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
+
     </application>
 
 </manifest>
